# xx_examples

./: .gitignore  .gitmodules  README.md
_1_bugs/: CMakeLists.txt
_1_bugs/src/: 1.htm  bug.cpp  bug.h  cfg.h  looper.cpp  looper.h  pch.h  res_frames.cpp  res_frames.h  scene.cpp  scene.h
_1_caterpillars/: CMakeLists.txt
_1_caterpillars/src/: _1_caterpillars.htm
_2_plane/: CMakeLists.txt
_2_plane/res/: pics.blist  tm.bmx
_2_plane/src/: 2.htm  bullet.cpp  bullet.h  cfg.h  effect_number.cpp  effect_number.h  explosion.cpp  explosion.h  looper.cpp  looper.h  monster.cpp  monster.h  pch.h  plane.cpp  plane.h  res_tp_frames.cpp  res_tp_frames.h  tree.cpp  tree.h
_2_plane/tm/: pics.tsx  tm.tiled-session  tm.tmx
_2_plane/tm/pics/: pics.tps
_3_code/: CMakeLists.txt
_3_code/src/: cfg.h  code.cpp  code.h  code2.h  code3.h  code4.h  drop.h  index.htm  looper.cpp  looper.h  pch.h  res_frames.cpp
_4_battle/: CMakeLists.txt
_4_battle/res/: pics.blist
_4_battle/src/: battle.cpp  battle.h  battle_action.h  battle_bladelight.h  battle_block.h  battle_block.hpp  battle_effect_text.h  battle_effect_text.hpp  battle_explosion.hpp  battle_monster.h  battle_monster.hpp  battle_monster_action_add.hpp  battle_monster_action_case.hpp  battle_monster_action_util.hpp  battle_monster_action_utils.hpp  battle_monster_actions.hpp  battle_scene.h  battle_scene.hpp  cfg.h  index.htm  looper.cpp  looper.h  pch.cpp  pch.h  res_frames.cpp  res_frames.h  res_tp_frames.cpp
_4_battle/texturepacker/: pics.blist  pics.plist  pics.tps  res_tp_frames.cpp  res_tp_frames.h
_5_battle2/: CMakeLists.txt
_5_battle2/src/: battle.h  battle_action.h  battle_bladelight.h  battle_bladelight.hpp  battle_block.h  battle_block.hpp  battle_drawable.h  battle_drawable.hpp  battle_effect_text.h  battle_effect_text.hpp  battle_enums.h  battle_explosion.h  battle_explosion.hpp  battle_item.h  battle_item.hpp  battle_item_cast.hpp  battle_item_init.hpp  battle_monster.h  battle_monster.hpp  battle_monster_action_add.hpp  battle_monster_action_case.hpp  battle_monster_action_utils.hpp  battle_monster_actions.hpp  battle_monster_draw.hpp  battle_monster_init.hpp  battle_monster_update.hpp  battle_projectile.h  battle_projectile.hpp  battle_projectile_fireball.h  battle_projectile_fireball.hpp  battle_scene.h  battle_scene.hpp  battle_scene_draw.hpp  battle_scene_init.hpp  battle_scene_update.hpp  battle_skill.h  battle_skill.hpp  battle_stat.h  battle_stat.hpp  index.htm  (+3 more)
_6_aabb/: CMakeLists.txt
_6_aabb/src/: battle.h  battle_block.h  battle_block.hpp  battle_drawable.h  battle_drawable.hpp  battle_monster.h  battle_monster.hpp  battle_monster_draw.hpp  battle_monster_init.hpp  battle_monster_update.hpp  battle_scene.h  battle_scene.hpp  battle_scene_draw.hpp  battle_scene_init.hpp  battle_scene_update.hpp  looper.cpp  looper.h  pch.cpp  pch.h
_7_netsim/: CMakeLists.txt
_7_netsim/src/: client.cpp  client.h  looper.cpp  looper.h  msgs.cpp  msgs.h  msgs_c2s.cpp  msgs_global.cpp  msgs_global_block.cpp  msgs_global_monsteer.cpp  msgs_global_scene.cpp  msgs_s2c.cpp  net.cpp  net.h  pch.cpp  pch.h  res_tp_frames.h  server.cpp  server.h  space.h
_8_netsim2/: CMakeLists.txt
_8_netsim2/src/: client.cpp  looper.cpp  msgs.cpp  msgs.h  msgs_global_block.cpp  msgs_global_monsteer.cpp  msgs_global_scene.cpp  pch.h  server.cpp  server.h
_9_fxcd/: CMakeLists.txt
_9_fxcd/src/: client.cpp  client.h  index.htm  looper.cpp  looper.h  msgs.cpp  msgs.h  msgs.hpp  msgs_c2s.cpp  msgs_c2s.h  msgs_c2s.hpp  msgs_global__enums.h  msgs_global_block.cpp  msgs_global_block.h  msgs_global_block.hpp  msgs_global_bullet.cpp  msgs_global_bullet.hpp  msgs_global_bullet_base.h  msgs_global_bullet_base.hpp  msgs_global_bullet_box.h  msgs_global_bullet_box.hpp  msgs_global_bullet_sector.h  msgs_global_bullet_sector.hpp  msgs_global_config_monster.h  msgs_global_config_monster.hpp  msgs_global_effect_text.cpp  msgs_global_effect_text.h  msgs_global_effect_text.hpp  msgs_global_equipment.h  msgs_global_equipment.hpp  msgs_global_item.h  msgs_global_item.hpp  msgs_global_monsteer.cpp  msgs_global_monster.h  msgs_global_monster.hpp  msgs_global_player.cpp  msgs_global_player.h  msgs_global_player.hpp  msgs_global_projectile.h  msgs_global_projectile.hpp  (+10 more)
_a_sound/: CMakeLists.txt
_a_sound/src/: index.htm  looper.cpp  looper.h  pch.cpp  pch.h  sound.h
_b_platform/: CMakeLists.txt
_b_platform/pics/: c_redheart_idle.bin.zst
_b_platform/src/: logic.h  logic.hpp  looper.cpp  looper.h  pch.h  scene.h  scene.hpp  scene_ai.h  scene_ai.hpp  scene_cd.h  scene_cd.hpp  scene_cd2.h  scene_cd2.hpp  scene_float.h  scene_float.hpp  scene_int.h  scene_int.hpp  scene_int2.h  scene_int2.hpp  scene_light.h  scene_light.hpp  scene_map.h  scene_map.hpp  xx_astar.h  xx_map.h  xx_space_box.h
docs/: index.html
docs/1/: 1.js  1.wasm  _1_bugs.wasm
docs/2/: 2.js  2.wasm  _2_plane.js
docs/4/: 4.js  4.wasm
docs/5/: 5.js  5.wasm
docs/6/: 6.js  6.wasm  index.htm
docs/7/: 7.js  7.wasm  index.htm
docs/8/: 8.js  8.wasm  index.htm
docs/9/: 9.js  9.wasm
docs/_1_bugs/: _1_bugs.htm  _1_bugs.js
docs/_2_plane/: _2_plane.wasm  index.html
docs/b/: b.js  b.wasm  index.htm
